test/libyul/yulSyntaxTests/if_statement_fail_1.yul
{ if let x:u256 {} }
// ====
// dialect: evmTyped
// ----
// ParserError 1856: (5-8): Literal or identifier expected.
